unpackaged/main/default/objects/MF_Audit_Descriptions__mdt/fields/Audit_Payload__c.field-meta.xml
<CustomField>
    <fullName>Audit_Payload__c</fullName>
    <label>Audit Payload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee level</fullName>
                <default>true</default>
                <label>Employee level</label>
            </value>
            <value>
                <fullName>Group level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>