unpackaged/main/default/objects/MF_Audit_Descriptions__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>