unpackaged/main/default/objects/MF_Audit_Descriptions__mdt/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <label>Parent Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MF Audit</fullName>
                <default>true</default>
                <label>MF Audit</label>
            </value>
            <value>
                <fullName>MF QLE</fullName>
            </value>
            <value>
                <fullName>MF NHE</fullName>
            </value>
            <value>
                <fullName>MF Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>