unpackaged/main/default/objects/MF_Audit_Descriptions__mdt/fields/TAdA_Type__c.field-meta.xml
<CustomField>
    <fullName>TAdA_Type__c</fullName>
    <label>TAdA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSA</fullName>
                <default>true</default>
                <label>HSA</label>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>